apps/headlamp/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: headlamp
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /headlamp
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  name: http
